--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,6 @@ ScummVM.includes
 #Ignore MS Visual C++ temporary files/subdirectories (except create_project.bat)
 dists/msvc*/**
 !dists/msvc*/create_project.bat
+
+#Ignroe MS Visual C++ VC.db file
+devtools/create_project/msvc*/create_project.VC.db
